--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest"
   },
   "dependencies": {
     "gatsby": "^4.16.0",
@@ -22,10 +23,19 @@
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-sitemap": "^5.17.0",
     "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-transformer-json": "^4.17.0",
     "gatsby-transformer-remark": "^5.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.1",
+    "gatsby-plugin-postcss": "^5.17.0",
+    "jest": "^28.1.1",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3"
   }
 }
