--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.16.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-preact": "^6.17.0",
     "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-sitemap": "^5.17.0",
@@ -26,11 +27,14 @@
     "gatsby-transformer-json": "^4.17.0",
     "gatsby-transformer-remark": "^5.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "preact": "^10.8.1",
+    "preact-render-to-string": "^5.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.1",
     "gatsby-plugin-postcss": "^5.17.0",
