--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-sitemap": "^5.17.0",
+    "gatsby-plugin-umami": "^0.1.3",
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-json": "^4.17.0",
     "gatsby-transformer-remark": "^5.17.0",
